# enigma-secret-contract-identity

./: .gitignore  README.md  package-lock.json  package.json
migrations/: 2_deploy_contracts.js
secret_contracts/demonstration/: Cargo.toml  enigma-types.h  notes.txt
secret_contracts/demonstration/src/: lib.rs
smart_contracts/: Receiver.sol
test/: demonstration.txt  test_demonstration.js
