[package]
name = "contract"
version = "0.1.0"

[dependencies]
eng-wasm = "0.1.3"
eng-wasm-derive = "0.1.3"
enigma-crypto = { git = "https://github.com/enigmampc/enigma-core.git", default-features = false, features = ["asymmetric", "hash"] }
rustc-hex = "2.0.1"
serde_derive = "1.0.84"
serde = "1.0.84"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
